--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,54 +1,71 @@
 # 2023-11-14
 
-共 135 条
+共 150 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 09:42:09 GMT+0800 (China Standard Time) -->
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+<!-- 最后更新时间 Tue Nov 14 2023 10:16:22 GMT+0800 (China Standard Time) -->
 1. [女子让司机开50公里免费送还手机](https://so.toutiao.com/search?keyword=女子让司机开50公里免费送还手机)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
 1. [“家门口”就医 要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医+要“有”还要“优”)
-1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [叶剑英元帅夫人吴博逝世 享年106岁](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世+享年106岁)
 1. [武汉两所高校官宣共用一扇校门](https://so.toutiao.com/search?keyword=武汉两所高校官宣共用一扇校门)
-1. [网友吐槽政务大厅全天工作6个小时](https://so.toutiao.com/search?keyword=网友吐槽政务大厅全天工作6个小时)
-1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
+1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
+1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
 1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
-1. [黄日华猛踢球员后续：大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华猛踢球员后续：大批粉丝脱粉)
 1. [官方辟谣铲车将垃圾推入长江](https://so.toutiao.com/search?keyword=官方辟谣铲车将垃圾推入长江)
 1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
 1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
 1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
-1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
-1. [刘殿座晒国足三位国门合影](https://so.toutiao.com/search?keyword=刘殿座晒国足三位国门合影)
-1. [律师谈校长强奸多名幼女被执行死刑](https://so.toutiao.com/search?keyword=律师谈校长强奸多名幼女被执行死刑)
-1. [国民党将中常会延后至19日召开](https://so.toutiao.com/search?keyword=国民党将中常会延后至19日召开)
-1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
-1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
-1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
+1. [小米雷军在线开怼iPhone](https://so.toutiao.com/search?keyword=小米雷军在线开怼iPhone)
+1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
+1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
+1. [网友吐槽政务大厅全天工作6个小时](https://so.toutiao.com/search?keyword=网友吐槽政务大厅全天工作6个小时)
+1. [奚梦瑶硬核提醒何猷君少吃甜食](https://so.toutiao.com/search?keyword=奚梦瑶硬核提醒何猷君少吃甜食)
+1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
+1. [浮桥案检方建议改判部分被告人无罪](https://so.toutiao.com/search?keyword=浮桥案检方建议改判部分被告人无罪)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
 1. [巴总理呼吁向加沙地带空投援助物资](https://so.toutiao.com/search?keyword=巴总理呼吁向加沙地带空投援助物资)
-1. [四川女篮新赛季豪取9连胜](https://so.toutiao.com/search?keyword=四川女篮新赛季豪取9连胜)
+1. [律师谈校长强奸多名幼女被执行死刑](https://so.toutiao.com/search?keyword=律师谈校长强奸多名幼女被执行死刑)
 1. [巴以冲突会演变成中东战争吗](https://so.toutiao.com/search?keyword=巴以冲突会演变成中东战争吗)
-1. [3D还原校长强奸猥亵22名学生案](https://so.toutiao.com/search?keyword=3D还原校长强奸猥亵22名学生案)
-1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
+1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
+1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
+1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
+1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
 1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
+1. [侯友宜：不能再让民进党新潮流当选](https://so.toutiao.com/search?keyword=侯友宜：不能再让民进党新潮流当选)
+1. [哈马斯：停火5天可换取释放70人](https://so.toutiao.com/search?keyword=哈马斯：停火5天可换取释放70人)
 1. [男子玉米地死亡 警方：酒后冻死](https://so.toutiao.com/search?keyword=男子玉米地死亡+警方：酒后冻死)
+1. [3D还原校长强奸猥亵22名学生案](https://so.toutiao.com/search?keyword=3D还原校长强奸猥亵22名学生案)
+1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
+1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
 1. [多国爆发臭虫危机民众不敢去电影院](https://so.toutiao.com/search?keyword=多国爆发臭虫危机民众不敢去电影院)
 1. [联合国102名工作人员死于巴以冲突](https://so.toutiao.com/search?keyword=联合国102名工作人员死于巴以冲突)
-1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
+1. [92岁妈妈把女儿家打造成从前模样](https://so.toutiao.com/search?keyword=92岁妈妈把女儿家打造成从前模样)
+1. [SpaceX今年已创下一项世界纪录](https://so.toutiao.com/search?keyword=SpaceX今年已创下一项世界纪录)
+1. [中方：中国领土我们一寸也不会放弃](https://so.toutiao.com/search?keyword=中方：中国领土我们一寸也不会放弃)
+1. [何猷君用实力说话](https://so.toutiao.com/search?keyword=何猷君用实力说话)
+1. [学青会林雨薇葛曼棋搭档夺金](https://so.toutiao.com/search?keyword=学青会林雨薇葛曼棋搭档夺金)
+1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
+1. [俄派遣副总理出访美国参加APEC会议](https://so.toutiao.com/search?keyword=俄派遣副总理出访美国参加APEC会议)
+1. [商家回应设置错误变0元购损失800万](https://so.toutiao.com/search?keyword=商家回应设置错误变0元购损失800万)
+1. [日媒：岸田东南亚之行针对中国](https://so.toutiao.com/search?keyword=日媒：岸田东南亚之行针对中国)
+1. [队报：姆巴佩与恩里克关系很好](https://so.toutiao.com/search?keyword=队报：姆巴佩与恩里克关系很好)
+1. [黄日华友谊赛中踹贵州球员](https://so.toutiao.com/search?keyword=黄日华友谊赛中踹贵州球员)
+1. [黄日华猛踢球员后续：大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华猛踢球员后续：大批粉丝脱粉)
+1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
+1. [刘殿座晒国足三位国门合影](https://so.toutiao.com/search?keyword=刘殿座晒国足三位国门合影)
+1. [国民党将中常会延后至19日召开](https://so.toutiao.com/search?keyword=国民党将中常会延后至19日召开)
+1. [四川女篮新赛季豪取9连胜](https://so.toutiao.com/search?keyword=四川女篮新赛季豪取9连胜)
 1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
 1. [巴以冲突致加沙超70万儿童流离失所](https://so.toutiao.com/search?keyword=巴以冲突致加沙超70万儿童流离失所)
-1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
 1. [俩男孩用雪圈接老师上班](https://so.toutiao.com/search?keyword=俩男孩用雪圈接老师上班)
 1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
-1. [商家回应设置错误变0元购损失800万](https://so.toutiao.com/search?keyword=商家回应设置错误变0元购损失800万)
-1. [学青会林雨薇葛曼棋搭档夺金](https://so.toutiao.com/search?keyword=学青会林雨薇葛曼棋搭档夺金)
-1. [哈马斯：停火5天可换取释放70人](https://so.toutiao.com/search?keyword=哈马斯：停火5天可换取释放70人)
-1. [92岁妈妈把女儿家打造成从前模样](https://so.toutiao.com/search?keyword=92岁妈妈把女儿家打造成从前模样)
-1. [中方：中国领土我们一寸也不会放弃](https://so.toutiao.com/search?keyword=中方：中国领土我们一寸也不会放弃)
 1. [以军轰炸卡塔尔加沙重建委员会总部](https://so.toutiao.com/search?keyword=以军轰炸卡塔尔加沙重建委员会总部)
 1. [妹妹想喝奶茶 哥哥霸气赞助](https://so.toutiao.com/search?keyword=妹妹想喝奶茶+哥哥霸气赞助)
 1. [双十一电视领域TCL夺多项第一](https://so.toutiao.com/search?keyword=双十一电视领域TCL夺多项第一)
-1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
 1. [中美元首会晤为何选在APEC期间](https://so.toutiao.com/search?keyword=中美元首会晤为何选在APEC期间)
 1. [杨幂穿马面裙](https://so.toutiao.com/search?keyword=杨幂穿马面裙)
 1. [鄂州中院院长陈旗已赴任湖北省高院](https://so.toutiao.com/search?keyword=鄂州中院院长陈旗已赴任湖北省高院)
@@ -63,11 +80,9 @@
 1. [缅北电诈头目明学昌年轻时惯于偷抢](https://so.toutiao.com/search?keyword=缅北电诈头目明学昌年轻时惯于偷抢)
 1. [巴以冲突已致双方超1.25万人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超1.25万人死亡)
 1. [传苹果公司将叫停摇一摇跳转广告](https://so.toutiao.com/search?keyword=传苹果公司将叫停摇一摇跳转广告)
-1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
 1. [埃尔多安：内塔尼亚胡该离开了](https://so.toutiao.com/search?keyword=埃尔多安：内塔尼亚胡该离开了)
 1. [以军袭击联合国雇员所住大楼](https://so.toutiao.com/search?keyword=以军袭击联合国雇员所住大楼)
 1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
-1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
 1. [女生拒绝相识8年男闺蜜告白后落泪](https://so.toutiao.com/search?keyword=女生拒绝相识8年男闺蜜告白后落泪)
 1. [40岁食堂阿姨备菜间学跳女团舞走红](https://so.toutiao.com/search?keyword=40岁食堂阿姨备菜间学跳女团舞走红)
 1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
