--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,57 +1,74 @@
 # 2023-11-14
 
-共 345 条
+共 358 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 22:00:46 GMT+0800 (China Standard Time) -->
-1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
-1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+<!-- 最后更新时间 Tue Nov 14 2023 23:00:41 GMT+0800 (China Standard Time) -->
+1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
+1. [英首相府回应卡梅伦就任后对华政策](https://so.toutiao.com/search?keyword=英首相府回应卡梅伦就任后对华政策)
 1. [颗粒归仓 筑牢中国粮食安全“压舱石”](https://so.toutiao.com/search?keyword=颗粒归仓+筑牢中国粮食安全“压舱石”)
-1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
 1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
+1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
+1. [山东一工地挖出巨石](https://so.toutiao.com/search?keyword=山东一工地挖出巨石)
 1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
-1. [以色列总统之子在加沙战斗中失联](https://so.toutiao.com/search?keyword=以色列总统之子在加沙战斗中失联)
 1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
 1. [司机因救助乘客被开除系谣言](https://so.toutiao.com/search?keyword=司机因救助乘客被开除系谣言)
-1. [山东一工地挖出巨石](https://so.toutiao.com/search?keyword=山东一工地挖出巨石)
+1. [老人接孩子途中嫖娼 金项链被偷](https://so.toutiao.com/search?keyword=老人接孩子途中嫖娼+金项链被偷)
 1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
 1. [媒体：缅北“明家”覆灭在即](https://so.toutiao.com/search?keyword=媒体：缅北“明家”覆灭在即)
-1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
-1. [原区长就餐落水身亡几大疑点引热议](https://so.toutiao.com/search?keyword=原区长就餐落水身亡几大疑点引热议)
-1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
 1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
-1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
-1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
-1. [女子装修砸开飘窗看见邻居家柜子](https://so.toutiao.com/search?keyword=女子装修砸开飘窗看见邻居家柜子)
-1. [考辛斯将参加国内街头篮球赛](https://so.toutiao.com/search?keyword=考辛斯将参加国内街头篮球赛)
-1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
-1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
+1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+1. [以色列总统之子在加沙战斗中失联](https://so.toutiao.com/search?keyword=以色列总统之子在加沙战斗中失联)
 1. [马斯克：美国现在缺芯片两年后缺电](https://so.toutiao.com/search?keyword=马斯克：美国现在缺芯片两年后缺电)
-1. [约旦：拒绝接受以占领加沙部分领土](https://so.toutiao.com/search?keyword=约旦：拒绝接受以占领加沙部分领土)
-1. [从太空带回来的“线虫”](https://so.toutiao.com/search?keyword=从太空带回来的“线虫”)
+1. [女子装修砸开飘窗看见邻居家柜子](https://so.toutiao.com/search?keyword=女子装修砸开飘窗看见邻居家柜子)
+1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
 1. [记者爬行救下冰窟男童9个月后被认出](https://so.toutiao.com/search?keyword=记者爬行救下冰窟男童9个月后被认出)
-1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
-1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
-1. [穿越机撞向俄T-90坦克引爆反应装甲](https://so.toutiao.com/search?keyword=穿越机撞向俄T-90坦克引爆反应装甲)
-1. [英首相府回应卡梅伦就任后对华政策](https://so.toutiao.com/search?keyword=英首相府回应卡梅伦就任后对华政策)
-1. [网传九江火车站附近涉黄现象严重](https://so.toutiao.com/search?keyword=网传九江火车站附近涉黄现象严重)
-1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
-1. [网友称35岁存款3万盼退休](https://so.toutiao.com/search?keyword=网友称35岁存款3万盼退休)
-1. [邝肖卿首次成为中国女首富](https://so.toutiao.com/search?keyword=邝肖卿首次成为中国女首富)
+1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
+1. [美官员对以可能占领加沙医院发警告](https://so.toutiao.com/search?keyword=美官员对以可能占领加沙医院发警告)
+1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
+1. [约旦：拒绝接受以占领加沙部分领土](https://so.toutiao.com/search?keyword=约旦：拒绝接受以占领加沙部分领土)
+1. [大学生真的买不起羽绒服吗](https://so.toutiao.com/search?keyword=大学生真的买不起羽绒服吗)
 1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
-1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
-1. [马斯克：中国不会对外侵略别国](https://so.toutiao.com/search?keyword=马斯克：中国不会对外侵略别国)
+1. [大连回应樱桃树死亡调查过程质疑](https://so.toutiao.com/search?keyword=大连回应樱桃树死亡调查过程质疑)
+1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
+1. [普京签署总统选举法修正案](https://so.toutiao.com/search?keyword=普京签署总统选举法修正案)
+1. [医院墙上直观展示饮料的含糖量](https://so.toutiao.com/search?keyword=医院墙上直观展示饮料的含糖量)
+1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
+1. [网友称35岁存款3万盼退休](https://so.toutiao.com/search?keyword=网友称35岁存款3万盼退休)
+1. [消息称华为手机本土零件占比90%](https://so.toutiao.com/search?keyword=消息称华为手机本土零件占比90%)
+1. [村超被踢小将回应黄日华道歉](https://so.toutiao.com/search?keyword=村超被踢小将回应黄日华道歉)
+1. [小红书公布双十一数据](https://so.toutiao.com/search?keyword=小红书公布双十一数据)
+1. [华为对平板提价 或因存储价格上涨](https://so.toutiao.com/search?keyword=华为对平板提价+或因存储价格上涨)
 1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
+1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
+1. [通信产业迎来新竞赛](https://so.toutiao.com/search?keyword=通信产业迎来新竞赛)
+1. [朱芳雨打趣徐杰差点破自己纪录](https://so.toutiao.com/search?keyword=朱芳雨打趣徐杰差点破自己纪录)
+1. [长沙猪肉价格大降](https://so.toutiao.com/search?keyword=长沙猪肉价格大降)
+1. [网友称上午被通知裁员下午办完手续](https://so.toutiao.com/search?keyword=网友称上午被通知裁员下午办完手续)
+1. [网传九江火车站附近涉黄现象严重](https://so.toutiao.com/search?keyword=网传九江火车站附近涉黄现象严重)
+1. [南昌一小区有人坠楼砸中路人](https://so.toutiao.com/search?keyword=南昌一小区有人坠楼砸中路人)
+1. [马斯克：中国不会对外侵略别国](https://so.toutiao.com/search?keyword=马斯克：中国不会对外侵略别国)
+1. [贾乃亮回应双十一“割韭菜”](https://so.toutiao.com/search?keyword=贾乃亮回应双十一“割韭菜”)
+1. [凭什么不叠被子蹲地吃饭要被罚款](https://so.toutiao.com/search?keyword=凭什么不叠被子蹲地吃饭要被罚款)
+1. [漫评：山姆大叔头顶航母观望巴以](https://so.toutiao.com/search?keyword=漫评：山姆大叔头顶航母观望巴以)
+1. [香港要拆光霓虹招牌？官方辟谣](https://so.toutiao.com/search?keyword=香港要拆光霓虹招牌？官方辟谣)
 1. [高职院校招保安要35岁以下硕士](https://so.toutiao.com/search?keyword=高职院校招保安要35岁以下硕士)
+1. [原区长就餐落水身亡几大疑点引热议](https://so.toutiao.com/search?keyword=原区长就餐落水身亡几大疑点引热议)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [考辛斯将参加国内街头篮球赛](https://so.toutiao.com/search?keyword=考辛斯将参加国内街头篮球赛)
+1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [从太空带回来的“线虫”](https://so.toutiao.com/search?keyword=从太空带回来的“线虫”)
+1. [穿越机撞向俄T-90坦克引爆反应装甲](https://so.toutiao.com/search?keyword=穿越机撞向俄T-90坦克引爆反应装甲)
+1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
+1. [邝肖卿首次成为中国女首富](https://so.toutiao.com/search?keyword=邝肖卿首次成为中国女首富)
+1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
 1. [研究：走路快不易高血压](https://so.toutiao.com/search?keyword=研究：走路快不易高血压)
 1. [广州警方通报河道发现女尸](https://so.toutiao.com/search?keyword=广州警方通报河道发现女尸)
-1. [老人接孩子途中嫖娼 金项链被偷](https://so.toutiao.com/search?keyword=老人接孩子途中嫖娼+金项链被偷)
-1. [网友称上午被通知裁员下午办完手续](https://so.toutiao.com/search?keyword=网友称上午被通知裁员下午办完手续)
 1. [每8个成年人里就有1名糖尿病患者](https://so.toutiao.com/search?keyword=每8个成年人里就有1名糖尿病患者)
 1. [美联航恢复北京旧金山每日直飞航班](https://so.toutiao.com/search?keyword=美联航恢复北京旧金山每日直飞航班)
 1. [住建部部长：构建房地产发展新模式](https://so.toutiao.com/search?keyword=住建部部长：构建房地产发展新模式)
 1. [文勇刚获委任为蔚来新任独立董事](https://so.toutiao.com/search?keyword=文勇刚获委任为蔚来新任独立董事)
-1. [凭什么不叠被子蹲地吃饭要被罚款](https://so.toutiao.com/search?keyword=凭什么不叠被子蹲地吃饭要被罚款)
 1. [军大衣成了大学生抗寒顶流](https://so.toutiao.com/search?keyword=军大衣成了大学生抗寒顶流)
 1. [解说员：利拉德和雄鹿体系格格不入](https://so.toutiao.com/search?keyword=解说员：利拉德和雄鹿体系格格不入)
 1. [习近平离京赴美国出席中美元首会晤](https://so.toutiao.com/search?keyword=习近平离京赴美国出席中美元首会晤)
@@ -97,11 +114,9 @@
 1. [美加州州长回应旧金山“创卫运动”](https://so.toutiao.com/search?keyword=美加州州长回应旧金山“创卫运动”)
 1. [女子恐高下山扶墙挪步](https://so.toutiao.com/search?keyword=女子恐高下山扶墙挪步)
 1. [英伟达发布新一代芯片H200](https://so.toutiao.com/search?keyword=英伟达发布新一代芯片H200)
-1. [长沙猪肉价格大降](https://so.toutiao.com/search?keyword=长沙猪肉价格大降)
 1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
 1. [国足赛前宣传片：伴我闯荡一起向往](https://so.toutiao.com/search?keyword=国足赛前宣传片：伴我闯荡一起向往)
 1. [媒体评四川一地规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=媒体评四川一地规定蹲地用餐罚20元)
-1. [南昌一小区有人坠楼砸中路人](https://so.toutiao.com/search?keyword=南昌一小区有人坠楼砸中路人)
 1. [以坦克开火第一视角：猛烈炮轰加沙](https://so.toutiao.com/search?keyword=以坦克开火第一视角：猛烈炮轰加沙)
 1. [国内油价或将实现4连跌](https://so.toutiao.com/search?keyword=国内油价或将实现4连跌)
 1. [印尼总统敦促拜登制止加沙“暴行”](https://so.toutiao.com/search?keyword=印尼总统敦促拜登制止加沙“暴行”)
@@ -145,7 +160,6 @@
 1. [生猪10月份售价再次下降](https://so.toutiao.com/search?keyword=生猪10月份售价再次下降)
 1. [全国猪肉价格连续8周下跌](https://so.toutiao.com/search?keyword=全国猪肉价格连续8周下跌)
 1. [小米华为手机销量同比增长超4成](https://so.toutiao.com/search?keyword=小米华为手机销量同比增长超4成)
-1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
 1. [日本计划明年1月发射情报收集卫星](https://so.toutiao.com/search?keyword=日本计划明年1月发射情报收集卫星)
 1. [这是90后父母取名的规律吗](https://so.toutiao.com/search?keyword=这是90后父母取名的规律吗)
 1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
@@ -184,7 +198,6 @@
 1. [第18届迪拜航展开幕](https://so.toutiao.com/search?keyword=第18届迪拜航展开幕)
 1. [前十月人民币贷款同比多增1.68万亿](https://so.toutiao.com/search?keyword=前十月人民币贷款同比多增1.68万亿)
 1. [前美职篮球员马布里申请落户香港](https://so.toutiao.com/search?keyword=前美职篮球员马布里申请落户香港)
-1. [小红书公布双十一数据](https://so.toutiao.com/search?keyword=小红书公布双十一数据)
 1. [婚礼放鞭炮新娘被新郎和哥哥保护](https://so.toutiao.com/search?keyword=婚礼放鞭炮新娘被新郎和哥哥保护)
 1. [政务大厅全天工作6小时？官方回应](https://so.toutiao.com/search?keyword=政务大厅全天工作6小时？官方回应)
 1. [父亲因拿不出80元给女儿交餐费哭泣](https://so.toutiao.com/search?keyword=父亲因拿不出80元给女儿交餐费哭泣)
